Fix device layout spacing on desktop

--- a/source/stylesheets/modules/_work-device-module.sass
+++ b/source/stylesheets/modules/_work-device-module.sass
@@ -12,7 +12,7 @@
   +break($laptop)
     font-size: 122%
   +break($desktop)
-    font-size: 175%
+    font-size: 160%
 
 
 // ========================================
